set(test_prefix "UTMorpho_")

add_subdirectory(datastruct)
add_subdirectory(maxtree)
add_subdirectory(alphatree)
add_subdirectory(component_tree)

if (TBB_FOUND)
  add_executable(${test_prefix}maxtree		maxtree.cpp)
  add_core_test(${test_prefix}maxtree             ${test_prefix}maxtree)
  set_target_properties(${test_prefix}maxtree  PROPERTIES OUTPUT_NAME maxtree_old)
endif(TBB_FOUND)

add_executable(${test_prefix}saturate         saturate.cpp)
add_executable(${test_prefix}dilate           dilate.cpp)
add_executable(${test_prefix}erode            erode.cpp)
add_executable(${test_prefix}gradient         gradient.cpp)
add_executable(${test_prefix}opening          opening.cpp)
add_executable(${test_prefix}extinction       extinction.cpp)
add_executable(${test_prefix}median_filter    median_filter.cpp)
add_executable(${test_prefix}hit_or_miss      hit_or_miss.cpp)

target_link_libraries(${test_prefix}saturate    ${FreeImage_LIBRARIES})
target_link_libraries(${test_prefix}dilate      ${FreeImage_LIBRARIES})
target_link_libraries(${test_prefix}erode       ${FreeImage_LIBRARIES})
target_link_libraries(${test_prefix}gradient    ${FreeImage_LIBRARIES})
target_link_libraries(${test_prefix}opening     ${FreeImage_LIBRARIES})
target_link_libraries(${test_prefix}median_filter ${FreeImage_LIBRARIES})

add_core_test(${test_prefix}saturate          ${test_prefix}saturate)
add_core_test(${test_prefix}dilate            ${test_prefix}dilate)
add_core_test(${test_prefix}erode             ${test_prefix}erode)
add_core_test(${test_prefix}gradient          ${test_prefix}gradient)
add_core_test(${test_prefix}opening           ${test_prefix}opening)
add_core_test(${test_prefix}extinction        ${test_prefix}extinction)
add_core_test(${test_prefix}median_filter     ${test_prefix}median_filter)
add_core_test(${test_prefix}hit_or_miss       ${test_prefix}hit_or_miss)
